adding support for deinstall enhanced protocol (r8)

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -4,6 +4,7 @@ Release 1.6:
 ============
 
 - added simple wizard for creating setup packages
+- added support for deinstallation / major updates
 
 Release 1.5:
 ============
